src/style.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body,
html {
  overflow: hidden;
}

body {
  margin: 0;
  display: flex;
  min-width: 320px;
  min-height: 100vh;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.87);
  background-color: var(--gray-800);
  overflow: hidden;
}

#app {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--size-03);
}

@media (prefers-color-scheme: light) {
  body {
    color: #213547;
    background-color: var(--white);
  }
  a:hover {
    color: #747bff;
  }
}

button {
  background: var(--gray-700);
  border: var(--border-width-1) solid var(--gray-600);
  box-shadow: var(--box-shadow-2);
  transition: var(--transition-all);
  border-radius: var(--border-radius-3);
  padding: var(--size-04);
  cursor: pointer;

  &:hover {
    box-shadow: var(--box-shadow-3);
  }

  &:active {
    outline: none;
  }

  &:disabled {
    opacity: 0.5;
    cursor: not-allowed;
  }
}

